tests/errors/params-with-same-name.ja
procedure foo(int x, int x)
    skip

procedure main()
    skip
